css/styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/********** 🌹  My Styles 🌹 *****/
/*** black #222222  dark Yellow #c78b07 yellow #ffe6ac ***/
/* 🧐  General Formatting 🧐  */
body{
	font-family: 'Open Sans', sans-serif;
	font-size: 14px; /*  1em = 14px = 1rem*/
	line-height: 1.5;
	color: #222;
}
.container{
 padding: 1em;
}
h1{
font-size: 71px;
font-weight: bold;
line-height: 106px;
margin-bottom: 17px;
}
h2{
font-size: 48px;
font-weight: bold;
margin-bottom: 12px;
}
h3{
font-size: 32px;
font-weight: bold;
}

h4{
font-size: 16px;
}
p{
	margin-bottom: 1em;
}
img{
	max-width: 100%;
	height: auto;
}
button{
	font-family: 'Open Sans', sans-serif;
}
.fa-play{
	padding-left: 10px;
}
.fa-magnifying-glass{
	color: #c78b07;
	font-size: 20px;
}
.logo{
  background-color:#c78b07;
	padding-top: 17px;
	padding-bottom: 17px;
}

nav{
	background-color: #222;
}

nav a:link,
nav a:visited{
	display: block;
	color:#c78b07;
	font-size: 18px;
	padding-top: 17px;
	padding-bottom:17px;
	text-align: center;
	text-decoration: none;
}

nav li.active a:link,
nav li.active a:visited  {
	background-color: #c78b07;
	color: #222;
}

nav form{
display: flex;
align-items: stretch;
}

nav input{
	flex-grow: 1;
	font-size: 18px;
	padding-top: 10px;
	padding-bottom: 10px;
}
nav button{
	background-color: #222;
	border-color: #c78b07;
	padding:6px 8px;
}

/* 🙀   WELCOME  🙀  */
.header-welcome{
  background-image: url("../images/main-banner.jpg");
  background-repeat: no-repeat;
  background-size: cover;
	background-position: center center;
  display: flex;
  flex-direction: column;
  color: white;
	padding-top: 68px;
	padding-bottom: 68px;
}

.header-welcome .container{
	background-color: rgba(0, 0, 0, 0.5);
	text-align:left; 
	vertical-align: middle;
	padding-top: 50px; 
}

/*  🌵 more space between arrow and text 🌵 */
.header-welcome button{
	font-size: 20px;
	padding: 34px;
	background-color: #c78b07;
	border: none;
}

/*---------About--------*/
.section-about{
	background-color: #ffe6ac;
	margin-bottom: 18px;
}

/*----------Our Services--------*/
.services{
  background-color: #ffe6ac;
	margin-bottom: 14px;
	padding-bottom: 14px;
}
.services img{
  width: 100%;
}
.services h3 {
	padding-top:24px;
	padding-left: 14px;
	padding-bottom: 14px;
}
.services p{
	padding-left: 14px;
}
.services button{
	background-color: #222;
	color: white;
	padding: 33px;
	font-size: 21px ;
	border: none;
	margin-left: 14px;
	}

/*-------Vision----------*/
.section-vision{
	background-image: url(../images/vision.jpg);
	background-position: center;
  background-repeat: no-repeat;
  background-size: cover; /* ❗ fix postion/size? ❗ */
	width: 100%;
	color:white;
}
.section-vision h3{
padding:14px 0px;;
}
.vision-btn{
	font-size: 20px;
	font-weight: bold;
	color: white;
	padding:33px;
	background-color: rgba(0, 0, 0, 0.5);
	border-color: #c78b07;
}

/*--------Team-----------*/

.profile-grid{
  background-color: #ffe6ac;
	margin-bottom: 14px;
}
.section-team img{
	width: 100%;
}
.section-team h3{
	padding-top: 7px;
}
.section-team h4{
	font-weight: bold;
	border-bottom: 2px;
	border-color: #c78b07;
	border-style: solid;
	
}
.section-team p{
	padding-top: 14px;
}
.profile-text{
	padding-left: 14px;
padding-bottom:14px;
}
.section-team{
	padding-bottom:18px;
}

/*----------Contact-------*/
.section-contact h2{
	padding-top: 36px;
	padding-bottom: 36px;
} 
.section-contact h3{
	padding-bottom:4px;
}
.section-contact label{
	font-size:14px ;
}
.message input{
  width: 100%;
	font-size: 14px;
	margin:7px 0;
	padding: 3px;
}
.message button{
	background-color: #222;
	color: #c78b07;
}
.message textarea {
  width: 100%;
  height: 150px;
  background-color: white;
  resize: none;
	font-size: 14px;
	margin: 7px 0;
	padding:3px;
}
.section-contact button{
	margin:18px 0;
	font-size:21px ;
}
.contact-iframe{
	position: relative;
	overflow: hidden;
	width: 100%;
	padding-top: 66%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
	}
.location iframe{
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	width: 100%;
	height: 100%;
	}
	/* ❗ iframe height  responsive iframe
	https://www.w3schools.com/howto/howto_css_responsive_iframes.asp ❗*/
table{
	width:100%;
	margin-bottom: 14px;
}
table, th, td {
  border:1px solid black;
	padding:14px;
}
tr:nth-child(1) {
	background-color: #ffe6ac;
}
/*----------Footer-------*/
footer p{
	margin: 7px 0;
}
footer{
	background-color: #222;
	color: #c78b07;
	padding: 16px;
}
footer a{
	color: #c78b07;
	text-decoration: underline; 
}
/*footer nth child margin bottom */
/* END OF YOUR MOBILE-FIRST CSS. 
NO MEDIA QUERIES ABOVE THIS LINE */

/* TABLET STYLES: 760px to 1199px */
@media screen and (min-width: 760px) {

	.container {
			width: 706px;
			margin: 0 auto;
	}
	/* NOTHING ELSE! */ 
}
/* 😓                   Desktop CSS                        😓 */
/* DESKTOP STYLES: ABOVE 1200px */
@media screen and (min-width: 1200px) {

	.container {
			width: 1168px;
			padding: 0 16px;
			margin: 0 auto;
	}

h1{ 
	font-size: 81px;
	line-height: 121px;
	/*line height*/
}

h2{
	font-size: 55px;
}
h3{
font-size: 36px;
}
h4{

}
p{
	font-size: 16px;
	line-height: 24px;
	margin: 0px;
}
.logo{
	background-color: #222222;
}

/*padding, or some other issue*/
nav .container {
display: flex;
justify-content: space-between;
align-items: center;
padding: 0px;
}
nav ul {
display: flex;
justify-content: space-around;
}

.logo{
  background-color:#222222;
	padding-top: 39px;
	padding-bottom: 30px;
	padding-right:61px;
	padding-left:0px;
}

nav a:link,
nav a:visited{
	font-size: 20px;
	padding: 20px 40px 18px ;
}

/*header padding for overlay*/
.header-welcome{
	padding:50px 0px;
}
.header-welcome .container{
	padding-top: 55px;

}
.header-welcome button{
	font-size:24px;
}

.section-about .container{
display: grid;
grid-template-columns: 1fr 1fr;
grid-template-rows: 1fr;
gap: 18px;
padding-top: 18px;
}
.section-about p{
	padding-bottom: 18px;
}

.section-about .text{
	grid-column: 2;
}
.section-about img{
	width: 100%;
	grid-column: 1;
}
.header-welcome button,
.section-vision button{
	margin: 16px 0px;
}
.section-vision{
	margin-top:18px;
}

.services-grid{
	display: grid;
	grid-template-columns: repeat(6, 1fr);
	grid-template-rows: 715px 625px;
	grid-column-gap: 14px;
	grid-row-gap: 14px;
}
.section-services{
	padding-top:18px;
}
.services{
	padding:0px;
	margin: 0px;
	display: grid;
}
.services button{
	margin:18px;
	font-size: 24px;

}
.section-services h3{
	padding-top:30px;
}
.digital{
	grid-column: 1 / span 3;
	grid-row: 1;
}
.marketing{
	grid-column: 4 / span 3;
	grid-row: 1;
}
.video{
	grid-column: 1 / span 2;
	grid-row: 2;
}
.web{
	grid-column: 3 / span 2;
	grid-row: 2;
}
.print{
	grid-column: 5 / span 2;
	grid-row: 2;
}

/* ------------- Team --------*/

.profile-grid{
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 1fr;
	margin: 0;
}
.profile-image.bob{
grid-column: 2;
grid-row: 1;
}
.profile-text.bob{
	grid-column: 1;
	grid-row:1;
}
/* ----------------- Desktop Contact -------*/
.section-contact h3{
	padding-bottom:3px;
}
.section-contact label{
	font-size:16px ;
}
.message input{
	font-size: 16px;
}
.message textarea{
	font-size: 16px;
}

.section-contact .grid-container{
display: grid;
grid-template-columns: 1fr 1fr;
grid-template-rows: 553px 223px;
gap:16px;
} 

.message{
grid-column: 1;
grid-row: 1 ;
}

.location {
grid-column: 2;
grid-row: 1;
}
.contact-iframe{

	padding-top: 80%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
	}
.hours {
grid-column: 1 / span 2;
grid-row: 2 ;
}


}

